# debug

1/: error_0_x.txt  error_0_y.txt  error_10_x.txt  error_10_y.txt  error_11_x.txt  error_11_y.txt  error_12_x.txt  error_12_y.txt  error_13_x.txt  error_13_y.txt  error_14_x.txt  error_14_y.txt  error_15_x.txt  error_15_y.txt  error_1_x.txt  error_1_y.txt  error_1_z.txt  error_2_x.txt  error_2_y.txt  error_3_x.txt  error_3_y.txt  error_48_fen_12.txt  error_48_fen_2.txt  error_48_fen_24.txt  error_48_fen_4.txt  error_48_fen_6.txt  error_48_nofen.txt  error_4_x.txt  error_4_y.txt  error_5_x.txt  error_5_y.txt  error_6_x.txt  error_6_y.txt  error_7_x.txt  error_7_y.txt  error_8_x.txt  error_8_y.txt  error_9_x.txt  error_9_y.txt  error_9_z.txt  (+6 more)
1/error_log/: _fen.txt  _nofen.txt  error_0_1.txt  error_0_14(12-15).txt  error_0_14(13-14).txt  error_0_14(9-10).txt  error_0_16.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
logs/ego_planner/: build.cmake.000.log.stderr  build.make.003.log.stderr  build.make.007.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.019.log.stderr  (+30 more)
src/: drone_.txt  drone_1.txt  test1.py
src/planner/plan_manage/: CMakeLists.txt
src/planner/plan_manage/config/: 1.rviz
src/planner/plan_manage/include/: ego_planner_node.h  m_planner_node.h  visualizer.hpp
src/planner/plan_manage/launch/: debug.launch
src/planner/plan_manage/src/: ego_planner_node.cpp  planner_manager.cpp
(+181 files in other folders)
